[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["seokhun14 <seokmomil@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true
